--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>User</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
+<p th:text="${'Username: ' + user.getUsername()}">VALUE</p>
+<p th:text="${'FirstName: ' + user.getFirstName()}">VALUE</p>
+<p th:text="${'LastName: ' + user.getLastName()}">VALUE</p>
+<p th:text="${'Email: ' + user.getEmail()}">VALUE</p>
 
-
+<form th:method="GET" th:action="@{/admin/{id}/update(id=${user.getId()})}">
+    <input type="submit" value="Update"/>
+    <input type="hidden" name="id" th:value="${user.getId()}"/>
+</form>
+<br/>
+<form th:method="POST" th:action="@{/admin/{id}(id=${user.getId()})}">
+    <input type="submit" value="Delete"/>
+    <input type="hidden" name="id" th:value="${user.getId()}"/>
+</form>
+<br/>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
 </body>
 </html>
